--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="home-img">
-        <img src="/asset/pic/adi1.jpg" alt="foto saya">
+        <img src="asset/pic/adi1.jpg" alt="foto saya">
         </div>
     </section>
     <section class="bio-about" id="about">
