--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <nav class="navbar">
-      <div class="logo" style="color: #0FFCBE;">MUHAMMAD ADI SYAHBANA</div>
+      <div class="logo" style="color: #0FFCBE;">MUHAMMAD ADI SYAHBANA YUHLEZ - Software House</div>
       <ul class="nav-link">
         <li><a href="#home">HOME</a></li>
         <li><a href="#about">ABOUT</a></li>
